# wrengame

./: .gitignore  CMakeLists.txt  FixYourTimestep.md  README.md  component.json  license.md  prebuild  readme.md  wren-wasm.sh
docs/: index.data  index.js  index.wasm
include/: breakout.h  dark.h  game.h  map copy.h  map.h  wren.h
include/breakout/: ballobject.h  breakout.h  gamelevel.h  gameobject.h  particlegenerator.h
include/dark/: array.h  core.h  either.h  list.h  map copy.h  map.h  path.h  polyfill.h  printf.h  tglm.h  types.h  vector.h
include/dark/collections/: list.h  map.h  vector.h
include/dark/types/: boolean.h  char.h  double.h  float.h  integer.h  long.h  number.c  short.h  string.h  stringbuilder.h
include/lib/: io.h  sdl.h  xna.h
include/lib/core/: stopwatch.h  timespan.h
include/lib/io/: File.h  Path.h  Stream.h
include/lib/sdl/: Renderer.h  Sdl.h  Window.h
include/lib/xna/: game.h  gametime.h  resourcemanager.h  shader.h  spriterenderer.h  texture2d.h
include/vm/: BindForeignClass.h  BindForeignMethod.h  Config.h  config.h  game.h  metadata.h
include/vm/io/: Path.h  Stream.h  io.h
include/xna/: game.h  resourcemanager.h  shader.h  spriterenderer.h  texture2d.h  xna.h
src/: demo.c  demo.c.txt  main wren.c.txt  main.c
wren/: main.wren
wren/lib/: io.wren  sdl.wren
wren/lib/io/: file.wren  path.wren  stream.wren
wren/lib/sdl/: renderer.wren  window.wren
wren/lib/xna/: game.wren
wren/some/: tester.wren
